--- a/circle.yml
+++ b/circle.yml
@@ -74,3 +74,6 @@ test:
     - python3 runtests.py #python3 unit tests
     - printf 'use Module::Load; \n load cleware; \n '|perl -w # test perl module
     - ./example.pl
+  post:
+    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
+    - find . -name *xml -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
