--- a/circle.yml
+++ b/circle.yml
@@ -8,15 +8,9 @@ dependencies:
   override:
     - echo dummy
   pre:
-    - sudo apt-get update > /dev/null 2> /dev/null
-    - sudo apt-get install telnet > /dev/null 2> /dev/null
-    - sudo apt-get install x11-utils > /dev/null 2> /dev/null
-    - sudo apt-get install xvkbd > /dev/null 2> /dev/null
-    - sudo apt-get install swig
-    - sudo apt-get install libusb-dev
-    - sudo apt-get install libperl-dev
-    - sudo apt-get install python-dev
-    - sudo apt-get install python3-pip
+    - sudo apt-get update
+    - sudo apt-get install telnet x11-utils xvkbd swig libusb-dev libperl-dev
+      python-dev python3-pip
   post:
     - pyenv local 3.5.2
 
