Revert "fixup: broken line did not work"
This reverts commit 09aa1ce9d02110f965ccf719945eb840a627da2b.

--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,8 @@ machine:
 dependencies:
   pre:
     - sudo apt-get update
-    - sudo apt-get install telnet x11-utils xvkbd swig libusb-dev libperl-dev python-dev python3-pip
+    - sudo apt-get install telnet x11-utils xvkbd swig libusb-dev libperl-dev
+      python-dev python3-pip
   post:
     - pyenv local 3.5.2
 
